Changes Part Two

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
                 <span id="typed-strings">
                   <span>I'm Mayuresh Shinde</span>
                   <span>Python Developer</span>
-                  <span>Passionate Program</span>
+                  <span>Passionate Programer</span>
                 </span>
                 <span id="typed"></span>
               </h1>
