--- a/templates/works.html
+++ b/templates/works.html
@@ -70,35 +70,35 @@
                     <div class="col-sm-4">
 
                       <a href="./work.html" title="" class="black-image-project-hover">
-                        <img src="./static/assets/images/work01-hover.jpg" alt="" class="img-responsive">
+                        <img src="./static/assets/images/hckr.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
-                        <h3>Sophisticated Hacker News</h3>
-                        <p>To read constantly updating Hacker News effficiently.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <h3>Hacker News</h3>
+                        <p>To read Hacker News effficiently.</p>
+                        <a href="https://github.com/mayureshinde/PyProjects" target="_blank" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <a href="./work.html" title="" class="black-image-project-hover">
-                        <img src="./static/assets/images/work02-hover.jpg" alt="" class="img-responsive">
+                        <img src="./static/assets/images/pass.png" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
-                        <h3>Secure Pwned</h3>
-                        <p>Check if your email and password have been compromised without putting it on internet.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <h3>Password</h3>
+                        <p>Check if your password is good enough .</p>
+                        <a href="https://github.com/mayureshinde/PyProjects" target="_blank" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <a href="./work.html" title="" class="black-image-project-hover">
-                        <img src="./static/assets/images/work03-hover.jpg" alt="" class="img-responsive">
+                        <img src="./static/assets/images/twitter.png" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
                         <h3>Twitter Bot</h3>
                         <p>Autometed replying bot on commments & likes to your potsts.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <a href="./work.html" target="_blank" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
@@ -106,7 +106,7 @@
                 <!--/row-->
             </div>
             <!--/item-->
-            <div class="item">
+            <!-- <div class="item">
                 <div class="row">
                   <div class="col-sm-4">
                     <a href="./work.html" class="black-image-project-hover">
@@ -143,17 +143,17 @@
                       </div>
                     </div>
                     
-                </div>
+                </div> -->
                 <!--/row-->
-            </div>
+           <!--  </div> -->
             
             <!--/item-->
-        </div>
+        <!-- </div> -->
         <!--/carousel-inner--> 
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
+        <!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
 
         <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
-     </div>
+     </div> -->
 
 
 
