--- a/templates/contact.html
+++ b/templates/contact.html
@@ -54,7 +54,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2"> Contact me</h1>
+            <h1 class="h2"> Contacts</h1>
           </div>
           
           <div class="row">
@@ -105,10 +105,10 @@
                       <!-- <a href="http://www.facebook.com" title="" class="fa-icon">
                         <i class="fa fa-facebook"></i>
                       </a> -->
-                      <a href="http://www.twitter.com" title="" class="fa-icon">
+                      <a href="https://twitter.com/mayureshnazi01" target="_blank" title="" class="fa-icon">
                         <i class="fa fa-twitter"></i>
                       </a>
-                      <a href="http://www.linkedin.com" title="" class="fa-icon">
+                      <a href="https://www.linkedin.com/feed/" target="_blank" title="" class="fa-icon">
                         <i class="fa fa-linkedin"></i>
                       </a>
 
