--- a/templates/about.html
+++ b/templates/about.html
@@ -62,12 +62,15 @@
               <div class="row">
                 <div class="col-xs-12 col-md-6">
                   <h3></h3>
-                  <p class="about"> I am a programmer from Karjat, Mumbai, passionate about  building programs     </p>
+                  <p class="about"> I'm a Certified Python Developer, passionate about building scalable and simple programs. For me Programming is not just about coding, it's creating efficient and productive programs which are future proof.</p>
                   <h3></h3>
-                  <p>
+                  <p class="about"> So far, I have worked on 2 moderately sized projects and 5+ small projects. Ranging from Web development to Data Analysis and Machine Learning. Mostly using Python but also worked on HTML for Frontend Development.
                   <h3></h3>
-                  <p>
+                  <p class="about">I have my Bachelors Degree in Science from the University of Mumbai. While in college I have learned and worked on numerous technologies such as Android Studio. Worked with MS OFFICE while working at High School & Jr. College as Jr. Administrator.
                   </p>
+                  <h3></h3>
+                  <p class="about">Later on, I decided to get more efficient in Python and web development frameworks. So I went to pursue Flask and Django. And planning to dive deeper into Data Science and Machine Learning & learn Hadoop & Apache to become Data Engineer.
+                  </p>  
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <img src="./static/assets/images/mayuresh4.jpeg" class="img-responsive" alt="">
