--- a/templates/contact.html
+++ b/templates/contact.html
@@ -111,7 +111,9 @@
                       <a href="https://www.linkedin.com/feed/" target="_blank" title="" class="fa-icon">
                         <i class="fa fa-linkedin"></i>
                       </a>
-
+                      <a href="https://github.com/mayureshinde" target="_blank" title="" class="fa-icon">
+                        <i class="fa fa-github"></i>
+                      </a>
                     </div>
                   </div>
                 </form>
