--- a/templates/works.html
+++ b/templates/works.html
@@ -76,7 +76,7 @@
                         <h4>001/006</h4>
                         <h3>Hacker News</h3>
                         <p>To read Hacker News effficiently.</p>
-                        <a href="https://github.com/mayureshinde/PyProjects" target="_blank" title="" class="btn btn-default">Discover</a>
+                        <a href="https://github.com/mayureshinde/PyProjects/tree/master/Hacker%20News" target="_blank" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -87,18 +87,18 @@
                         <h4>002/006</h4>
                         <h3>Password</h3>
                         <p>Check if your password is good enough .</p>
-                        <a href="https://github.com/mayureshinde/PyProjects" target="_blank" title="" class="btn btn-default">Discover</a>
+                        <a href="https://github.com/mayureshinde/PyProjects/tree/master/Password" target="_blank" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <a href="./work.html" title="" class="black-image-project-hover">
-                        <img src="./static/assets/images/twitter.png" alt="" class="img-responsive">
+                        <img src="./static/assets/images/iris.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
-                        <h3>Twitter Bot</h3>
-                        <p>Autometed replying bot on commments & likes to your potsts.</p>
-                        <a href="./work.html" target="_blank" title="" class="btn btn-default">Discover</a>
+                        <h3>Identifying Flower</h3>
+                        <p>Identifying the species of Iris flower from data.</p>
+                        <a href="https://github.com/mayureshinde/PyProjects/tree/master/Iris" target="_blank" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
